Update the library

--- a/docs/15.编程资料/5.JAVA学习笔记/01.Java学习路线.md
+++ b/docs/15.编程资料/5.JAVA学习笔记/01.Java学习路线.md
@@ -81,6 +81,8 @@ PS：文章转载至[鱼皮](https://github.com/liyupi/code-roadmap)，会因为
 
    - 进制转换、计算精度丢失办法
 
+   - 在二进制中无法精准表示0.1，二进制中能精准表示的只有1/2的n次方
+
 4. final 关键字的作用
 
 5. 介绍 Java 的集合类
